tests/ui/parse_expr.stderr
error: unexpected end of macro invocation
 --> $DIR/parse_expr.rs:4:5
  |
4 |     json!({ "a" : ~ });
  |     ^^^^^^^^^^^^^^^^^^^ missing tokens in macro arguments
  |
  = note: this error originates in a macro outside of the current crate (in Nightly builds, run with -Z external-macro-backtrace for more info)
